Almost complete inventory page

--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link href='https://fonts.googleapis.com/css?family=Sacramento' rel='stylesheet' type='text/css'>
+      <link href='https://fonts.googleapis.com/css?family=Alice' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/application.css">
     <meta name="viewport" content="width=device-width">
     <title>Bar-Manager</title>
@@ -13,10 +15,10 @@
             <img rel="main" src="img/mainimg3.JPG"/>
 
 
-              <header id="header">
-                <div id="header-content">
+              <header class="header">
+                <div class="header-content">
                     <ul>
-                      <li>Inventory</li>
+                      <li><div class="big-li">Inventory</div></li>
                       <li>Recipes</li>
                       <li>Recipe Builder</li>
                       <li>Drink Planner</li>
@@ -26,11 +28,11 @@
                 </div>
               </header>
 
-              <div id="mid1">
+              <div class="mid1 center-inflex">
                 <h3>For people who like to drink at home</h3>
               </div>
 
-              <div id="mid2">
+              <div class="mid2 center-inflex">
                 <h1>Bar-Manager</h1>
               </div>
 
@@ -38,7 +40,7 @@
                 <div id="button">My Inventory</div>
               </div> -->
 
-              <footer id="footer">
+              <footer class="footer">
                 <div class="footer-content">
                     <ul>
                       <li></li>
@@ -54,12 +56,12 @@
          </div>
 
          <div class= "container2">
-           <div id="topbar"></div>
-           <div id="gallery1"></div>
+           <div class="topbar"></div>
+           <div class="gallery1"></div>
              <img rel="img1" src="img/horizontallips1.jpg" alt="Glossy Purple and Blue Lips">
              <img rel="img2" src="img/verticaleye2.jpg" alt="Glossy Purple and Blue Lips">
              <img rel="img3" src="img/verticalface2.jpg" alt="Glossy Purple and Blue Lips">
-           <div id="gallery2"></div>
+           <div class="gallery2"></div>
              <img rel="img4" src="img/verticalface1.jpg" alt="Glossy Purple and Blue Lips">
              <img rel="img5" src="img/verticallips1.jpg" alt="Glossy Purple and Blue Lips">
              <img rel="img6" src="img/verticallipsnails1.png" alt="Glossy Purple and Blue Lips">
