--- a/public/inventory.html
+++ b/public/inventory.html
@@ -22,20 +22,106 @@
 
               <div class="partial-container">
                   <div class="mid1 inventory-table" >
+                      <table>
 
-                    <img rel="inventory" src="img/inventory-holder.JPG"/>
+                    <thead>
+                      <tr>
+                          <th>Amount</th>
+                          <th>Type</th>
+                          <th>Name</th>
+                          <th>Price</th>
+                        </a>
+                      </tr>
+                    </thead>
+
+                    <tbody>
+                      <tr>
+                          <td>Frozen</td>
+                          <td>Fox</td>
+                          <td>Slytherin</td>
+                          <td>$1,907,675,678</td>
+                      </tr>
+
+                      <tr>
+                          <td>Toy Story 3</td>
+                          <td>Dreamworks</td>
+                          <td>Hogwarts</td>
+                          <td>$156,907,345</td>
+                      </tr>
+
+                      <tr>
+                          <td>Minions</td>
+                          <td>Labala</td>
+                          <td>Hufflepuff</td>
+                          <td>$1,907,675,678</td>
+                      </tr>
+
+                      <tr>
+                          <td>The Lion King</td>
+                          <td>Muthoopa</td>
+                          <td>Gryffindor</td>
+                          <td>$1,907,675,678</td>
+                      </tr>
+
+                      <tr>
+                          <td>Despicable Me</td>
+                          <td>Snilverer</td>
+                          <td>Ravenclaw</td>
+                          <td>$907,675,678</td>
+                      </tr>
+
+                      <tr>
+                          <td>Finding Nemo</td>
+                          <td>Corpin</td>
+                          <td>Pottermore</td>
+                          <td>$907,675,678</td>
+                      </tr>
+
+                      <tr>
+                          <td>Shrek 2</td>
+                          <td>Mehdingus</td>
+                          <td>Hermione</td>
+                          <td>$907,675,678</td>
+                      </tr>
+
+                      <tr>
+                          <td>Ice Age: Dawn of the Dinosaurs</td>
+                          <td>Felp Melin</td>
+                          <td>Weasley</td>
+                          <td>$907,675,678</td>
+                      </tr>
+
+                    </tbody>
+                  </table>
+
                     <img rel="conversion" src="img/conversion-holder.JPG"/>
 
                   </div>
-
+                </div>
                   <div class="mid2">
 
-                  </div>
+                    <div id='cssmenu'>
+                        <ul>
+                           <li class='has-sub'><a href='#'><span>Products</span></a>
+                              <ul>
+                                 <li><a href='#'><span>Product 1</span></a></li>
+                                 <li><a href='#'><span>Product 2</span></a></li>
+                                 <li class='last'><a href='#'><span>Product 3</span></a></li>
+                              </ul>
+                           </li>
+                        </ul>
+                        </div>
+                    </div>
 
-                  <div class="mid2">
+               <div class="mid3">
+                   <form action="#" method="post">
+                      Brand: <input type="text" placeholder="First name"/>
+                      Price: <input type="text"/>
+                      Current Amount Available: <input type="textarea"/>
+                     <input type="submit" value="Send"/>
+                   </form>
+              </div>
 
-                  </div>
-             </div>
               <footer class="footer">
                 <div class="footer-content">
                     <ul>
@@ -46,9 +132,9 @@
                       <li>Search</li>
                     </ul>
 
+                  </div>
 
-                </div>
               </footer>
-         </div>
+
     </body>
 </html>
