recipe builder ready for back-end

--- a/public/inventory.html
+++ b/public/inventory.html
@@ -98,7 +98,7 @@
 
                   </div>
                 </div>
-                  <div class="mid2">
+                  <div class="mid2 mid-inventory">
 
                     <div id='cssmenu'>
                         <ul>
@@ -135,6 +135,5 @@
                   </div>
 
               </footer>
-
     </body>
 </html>
