add recipe dropdown to recipe-builder page

--- a/public/recipe-build.html
+++ b/public/recipe-build.html
@@ -19,11 +19,21 @@
             </div>
           </header>
 
+        <div class="partial-container">
 
+            <div id='cssmenu' class='recipe-list' >
+              <ul>
+                 <li class='has-sub'><a href='#'><span>Recipe List</span></a>
+                    <ul>
+                       <li><a href='#'><span>Product 1</span></a></li>
+                       <li><a href='#'><span>Product 2</span></a></li>
+                       <li class='last'><a href='#'><span>Product 3</span></a></li>
+                    </ul>
+                 </li>
+              </ul>
+              </div>
 
-        <div class="partial-container"></div>
-
-              <form action="#" method="post" class="buildform recipe-entry">
+              <form action="#" method="post" class="recipe-entry">
                 Recipe Name: <input type="text" placeholder="Name"/>
                 Created By: <input type="textarea" placeholder="Creator"/>
                 Prep Time: <input type="text" placeholder="Min"/>
@@ -33,78 +43,6 @@
 
 
 
-                   <div class="mid3 flex-inventory small-ish">
-                     <form action="#" method="post" class="buildform">
-                           <div id='cssmenu' class='menu-inventory small' >
-                             <ul class="small">
-                                <li class='has-sub'><a href='#'><span>Products</span></a>
-                                   <ul>
-                                      <li><a href='#'><span>Product 1</span></a></li>
-                                      <li><a href='#'><span>Product 2</span></a></li>
-                                      <li class='last'><a href='#'><span>Product 3</span></a></li>
-                                   </ul>
-                                </li>
-                             </ul>
-                             </div>
-                          Amount: <input type="text" placeholder="Ounces"/>
-                          Info: <input type="textarea" placeholder="Style"/>
-
-                       </form>
-                  </div>
-                  <div class="mid3 flex-inventory small-ish">
-                    <form action="#" method="post" class="buildform">
-                          <div id='cssmenu' class='menu-inventory small' >
-                            <ul class="small">
-                               <li class='has-sub'><a href='#'><span>Products</span></a>
-                                  <ul>
-                                     <li><a href='#'><span>Product 1</span></a></li>
-                                     <li><a href='#'><span>Product 2</span></a></li>
-                                     <li class='last'><a href='#'><span>Product 3</span></a></li>
-                                  </ul>
-                               </li>
-                            </ul>
-                            </div>
-                         Amount: <input type="text" placeholder="Ounces"/>
-                         Info: <input type="textarea" placeholder="Style"/>
-
-                      </form>
-                 </div>
-                 <div class="mid3 flex-inventory small-ish">
-                   <form action="#" method="post" class="buildform">
-                         <div id='cssmenu' class='menu-inventory small' >
-                           <ul class="small">
-                              <li class='has-sub'><a href='#'><span>Products</span></a>
-                                 <ul>
-                                    <li><a href='#'><span>Product 1</span></a></li>
-                                    <li><a href='#'><span>Product 2</span></a></li>
-                                    <li class='last'><a href='#'><span>Product 3</span></a></li>
-                                 </ul>
-                              </li>
-                           </ul>
-                           </div>
-                        Amount: <input type="text" placeholder="Ounces"/>
-                        Info: <input type="textarea" placeholder="Style"/>
-
-                     </form>
-                </div>
-                <div class="mid3 flex-inventory small-ish">
-                  <form action="#" method="post" class="buildform">
-                        <div id='cssmenu' class='menu-inventory small' >
-                          <ul class="small">
-                             <li class='has-sub'><a href='#'><span>Products</span></a>
-                                <ul>
-                                   <li><a href='#'><span>Product 1</span></a></li>
-                                   <li><a href='#'><span>Product 2</span></a></li>
-                                   <li class='last'><a href='#'><span>Product 3</span></a></li>
-                                </ul>
-                             </li>
-                          </ul>
-                          </div>
-                       Amount: <input type="text" placeholder="Ounces"/>
-                       Info: <input type="textarea" placeholder="Style"/>
-
-                    </form>
-               </div>
                <div class="mid3 flex-inventory small-ish">
                  <form action="#" method="post" class="buildform">
                        <div id='cssmenu' class='menu-inventory small' >
@@ -177,6 +115,79 @@
 
                 </form>
            </div>
+           <div class="mid3 flex-inventory small-ish">
+             <form action="#" method="post" class="buildform">
+                   <div id='cssmenu' class='menu-inventory small' >
+                     <ul class="small">
+                        <li class='has-sub'><a href='#'><span>Products</span></a>
+                           <ul>
+                              <li><a href='#'><span>Product 1</span></a></li>
+                              <li><a href='#'><span>Product 2</span></a></li>
+                              <li class='last'><a href='#'><span>Product 3</span></a></li>
+                           </ul>
+                        </li>
+                     </ul>
+                     </div>
+                  Amount: <input type="text" placeholder="Ounces"/>
+                  Info: <input type="textarea" placeholder="Style"/>
+
+               </form>
+          </div>
+          <div class="mid3 flex-inventory small-ish">
+            <form action="#" method="post" class="buildform">
+                  <div id='cssmenu' class='menu-inventory small' >
+                    <ul class="small">
+                       <li class='has-sub'><a href='#'><span>Products</span></a>
+                          <ul>
+                             <li><a href='#'><span>Product 1</span></a></li>
+                             <li><a href='#'><span>Product 2</span></a></li>
+                             <li class='last'><a href='#'><span>Product 3</span></a></li>
+                          </ul>
+                       </li>
+                    </ul>
+                    </div>
+                 Amount: <input type="text" placeholder="Ounces"/>
+                 Info: <input type="textarea" placeholder="Style"/>
+
+              </form>
+         </div>
+         <div class="mid3 flex-inventory small-ish">
+           <form action="#" method="post" class="buildform">
+                 <div id='cssmenu' class='menu-inventory small' >
+                   <ul class="small">
+                      <li class='has-sub'><a href='#'><span>Products</span></a>
+                         <ul>
+                            <li><a href='#'><span>Product 1</span></a></li>
+                            <li><a href='#'><span>Product 2</span></a></li>
+                            <li class='last'><a href='#'><span>Product 3</span></a></li>
+                         </ul>
+                      </li>
+                   </ul>
+                   </div>
+                Amount: <input type="text" placeholder="Ounces"/>
+                Info: <input type="textarea" placeholder="Style"/>
+
+             </form>
+        </div>
+        <div class="mid3 flex-inventory small-ish">
+          <form action="#" method="post" class="buildform">
+                <div id='cssmenu' class='menu-inventory small' >
+                  <ul class="small">
+                     <li class='has-sub'><a href='#'><span>Products</span></a>
+                        <ul>
+                           <li><a href='#'><span>Product 1</span></a></li>
+                           <li><a href='#'><span>Product 2</span></a></li>
+                           <li class='last'><a href='#'><span>Product 3</span></a></li>
+                        </ul>
+                     </li>
+                  </ul>
+                  </div>
+               Amount: <input type="text" placeholder="Ounces"/>
+               Info: <input type="textarea" placeholder="Style"/>
+
+            </form>
+          </div>
+        </div>
               <footer class="footer">
                 <div class="footer-content">
                     <ul>
