add missing recipe dropdown to builder page

--- a/public/recipe-build.html
+++ b/public/recipe-build.html
@@ -5,7 +5,7 @@
     <link href='https://fonts.googleapis.com/css?family=Alice' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/application.css">
     <meta name="viewport" content="width=device-width">
-    <title>Bar-Inventory</title>
+    <title>Recipe-Build</title>
   </head>
     <body>
 
