prepare pages for back end...I hope...

--- a/public/inventory.html
+++ b/public/inventory.html
@@ -36,59 +36,10 @@
 
                     <tbody>
                       <tr>
-                          <td>Frozen</td>
+                          <td>Brand: <input type="text" placeholder="First name"/></td>
                           <td>Fox</td>
                           <td>Slytherin</td>
                           <td>$1,907,675,678</td>
-                      </tr>
-
-                      <tr>
-                          <td>Toy Story 3</td>
-                          <td>Dreamworks</td>
-                          <td>Hogwarts</td>
-                          <td>$156,907,345</td>
-                      </tr>
-
-                      <tr>
-                          <td>Minions</td>
-                          <td>Labala</td>
-                          <td>Hufflepuff</td>
-                          <td>$1,907,675,678</td>
-                      </tr>
-
-                      <tr>
-                          <td>The Lion King</td>
-                          <td>Muthoopa</td>
-                          <td>Gryffindor</td>
-                          <td>$1,907,675,678</td>
-                      </tr>
-
-                      <tr>
-                          <td>Despicable Me</td>
-                          <td>Snilverer</td>
-                          <td>Ravenclaw</td>
-                          <td>$907,675,678</td>
-                      </tr>
-
-                      <tr>
-                          <td>Finding Nemo</td>
-                          <td>Corpin</td>
-                          <td>Pottermore</td>
-                          <td>$907,675,678</td>
-                      </tr>
-
-                      <tr>
-                          <td>Shrek 2</td>
-                          <td>Mehdingus</td>
-                          <td>Hermione</td>
-                          <td>$907,675,678</td>
-                      </tr>
-
-                      <tr>
-                          <td>Ice Age: Dawn of the Dinosaurs</td>
-                          <td>Felp Melin</td>
-                          <td>Weasley</td>
-                          <td>$907,675,678</td>
                       </tr>
 
                     </tbody>
@@ -98,29 +49,29 @@
 
                   </div>
                 </div>
-                  <div class="mid2 mid-inventory">
 
-                    <div id='cssmenu'>
-                        <ul>
-                           <li class='has-sub'><a href='#'><span>Products</span></a>
-                              <ul>
-                                 <li><a href='#'><span>Product 1</span></a></li>
-                                 <li><a href='#'><span>Product 2</span></a></li>
-                                 <li class='last'><a href='#'><span>Product 3</span></a></li>
-                              </ul>
-                           </li>
-                        </ul>
-                        </div>
-                    </div>
+                    <form action="#" method="post" class="inventory-input">
 
-               <div class="mid3">
-                   <form action="#" method="post">
-                      Brand: <input type="text" placeholder="First name"/>
-                      Price: <input type="text"/>
-                      Current Amount Available: <input type="textarea"/>
-                     <input type="submit" value="Send"/>
-                   </form>
+                       <div class="encompass">
+                         <div class='dropdown-btn small' >
+                           <ul class="small">
+                               <li class='has-sub'><a href='#'><span>Products</span></a>
+                                  <ul>
+                                     <li><a href='#'><span>Product 1</span></a></li>
+                                     <li><a href='#'><span>Product 2</span></a></li>
+                                     <li class='last'><a href='#'><span>Product 3</span></a></li>
+                                  </ul>
+                               </li>
+                           </ul>
+                           Brand: <input type="text" placeholder="Jack"/>
+                           Price: <input type="text" placeholder="00.00"/>
+                           Current Amount Avalable: <input type="textarea" placeholder="Ounces"/>
+                         </div>
+                     <input type="submit" value="Submit"/>
+
               </div>
+            </form>
+
 
               <footer class="footer">
                 <div class="footer-content">
@@ -135,5 +86,6 @@
                   </div>
 
               </footer>
+              </div>
     </body>
 </html>
