--- a/public/recipe-build.html
+++ b/public/recipe-build.html
@@ -21,7 +21,7 @@
 
         <div class="partial-container">
 
-            <div id='cssmenu' class='recipe-list' >
+            <div class='dropdown-btn' class='recipe-list' >
               <ul>
                  <li class='has-sub'><a href='#'><span>Recipe List</span></a>
                     <ul>
@@ -31,22 +31,26 @@
                     </ul>
                  </li>
               </ul>
-              </div>
+              </div> 
 
-              <form action="#" method="post" class="recipe-entry">
+              <form action="#" method="post">
+                <div class="recipe-entry">
                 Recipe Name: <input type="text" placeholder="Name"/>
                 Created By: <input type="textarea" placeholder="Creator"/>
                 Prep Time: <input type="text" placeholder="Min"/>
                 Notes: <input type="textarea" placeholder="Notes"/>
                 Directions: <input type="textarea" placeholder="Directions"/>
+              </div>
               </form>
 
 
 
-               <div class="mid3 flex-inventory small-ish">
+
                  <form action="#" method="post" class="buildform">
-                       <div id='cssmenu' class='menu-inventory small' >
-                         <ul class="small">
+
+                    <div class="encompass">
+                      <div class='dropdown-btn small' >
+                        <ul class="small">
                             <li class='has-sub'><a href='#'><span>Products</span></a>
                                <ul>
                                   <li><a href='#'><span>Product 1</span></a></li>
@@ -54,140 +58,113 @@
                                   <li class='last'><a href='#'><span>Product 3</span></a></li>
                                </ul>
                             </li>
-                         </ul>
-                         </div>
-                      Amount: <input type="text" placeholder="Ounces"/>
-                      Info: <input type="textarea" placeholder="Style"/>
-
-                   </form>
-              </div>
-              <div class="mid3 flex-inventory small-ish">
-                <form action="#" method="post" class="buildform">
-                      <div id='cssmenu' class='menu-inventory small' >
-                        <ul class="small">
-                           <li class='has-sub'><a href='#'><span>Products</span></a>
-                              <ul>
-                                 <li><a href='#'><span>Product 1</span></a></li>
-                                 <li><a href='#'><span>Product 2</span></a></li>
-                                 <li class='last'><a href='#'><span>Product 3</span></a></li>
-                              </ul>
-                           </li>
                         </ul>
-                        </div>
-                     Amount: <input type="text" placeholder="Ounces"/>
-                     Info: <input type="textarea" placeholder="Style"/>
+                        Amount: <input type="text" placeholder="Ounces"/>
+                        Info: <input type="textarea" placeholder="Style"/>
+                      </div>
+
+                      <div class='dropdown-btn small' >
+                        <ul class="small">
+                            <li class='has-sub'><a href='#'><span>Products</span></a>
+                               <ul>
+                                  <li><a href='#'><span>Product 1</span></a></li>
+                                  <li><a href='#'><span>Product 2</span></a></li>
+                                  <li class='last'><a href='#'><span>Product 3</span></a></li>
+                               </ul>
+                            </li>
+                        </ul>
+                        Amount: <input type="text" placeholder="Ounces"/>
+                        Info: <input type="textarea" placeholder="Style"/>
+                      </div>
+
+                      <div class='dropdown-btn small' >
+                        <ul class="small">
+                            <li class='has-sub'><a href='#'><span>Products</span></a>
+                               <ul>
+                                  <li><a href='#'><span>Product 1</span></a></li>
+                                  <li><a href='#'><span>Product 2</span></a></li>
+                                  <li class='last'><a href='#'><span>Product 3</span></a></li>
+                               </ul>
+                            </li>
+                        </ul>
+                        Amount: <input type="text" placeholder="Ounces"/>
+                        Info: <input type="textarea" placeholder="Style"/>
+                      </div>
+
+                      <div class='dropdown-btn small' >
+                        <ul class="small">
+                            <li class='has-sub'><a href='#'><span>Products</span></a>
+                               <ul>
+                                  <li><a href='#'><span>Product 1</span></a></li>
+                                  <li><a href='#'><span>Product 2</span></a></li>
+                                  <li class='last'><a href='#'><span>Product 3</span></a></li>
+                               </ul>
+                            </li>
+                        </ul>
+                        Amount: <input type="text" placeholder="Ounces"/>
+                        Info: <input type="textarea" placeholder="Style"/>
+                      </div>
+
+                      <div class='dropdown-btn small' >
+                        <ul class="small">
+                            <li class='has-sub'><a href='#'><span>Products</span></a>
+                               <ul>
+                                  <li><a href='#'><span>Product 1</span></a></li>
+                                  <li><a href='#'><span>Product 2</span></a></li>
+                                  <li class='last'><a href='#'><span>Product 3</span></a></li>
+                               </ul>
+                            </li>
+                        </ul>
+                        Amount: <input type="text" placeholder="Ounces"/>
+                        Info: <input type="textarea" placeholder="Style"/>
+                      </div>
+
+                      <div class='dropdown-btn small' >
+                        <ul class="small">
+                            <li class='has-sub'><a href='#'><span>Products</span></a>
+                               <ul>
+                                  <li><a href='#'><span>Product 1</span></a></li>
+                                  <li><a href='#'><span>Product 2</span></a></li>
+                                  <li class='last'><a href='#'><span>Product 3</span></a></li>
+                               </ul>
+                            </li>
+                        </ul>
+                        Amount: <input type="text" placeholder="Ounces"/>
+                        Info: <input type="textarea" placeholder="Style"/>
+                      </div>
+
+                      <div class='dropdown-btn small' >
+                        <ul class="small">
+                            <li class='has-sub'><a href='#'><span>Products</span></a>
+                               <ul>
+                                  <li><a href='#'><span>Product 1</span></a></li>
+                                  <li><a href='#'><span>Product 2</span></a></li>
+                                  <li class='last'><a href='#'><span>Product 3</span></a></li>
+                               </ul>
+                            </li>
+                        </ul>
+                        Amount: <input type="text" placeholder="Ounces"/>
+                        Info: <input type="textarea" placeholder="Style"/>
+                      </div>
+
+                      <div class='dropdown-btn small' >
+                        <ul class="small">
+                            <li class='has-sub'><a href='#'><span>Products</span></a>
+                               <ul>
+                                  <li><a href='#'><span>Product 1</span></a></li>
+                                  <li><a href='#'><span>Product 2</span></a></li>
+                                  <li class='last'><a href='#'><span>Product 3</span></a></li>
+                               </ul>
+                            </li>
+                        </ul>
+                        Amount: <input type="text" placeholder="Ounces"/>
+                        Info: <input type="textarea" placeholder="Style"/>
+                      </div>
+                    </div>
 
                   </form>
-             </div>
-             <div class="mid3 flex-inventory small-ish">
-               <form action="#" method="post" class="buildform">
-                     <div id='cssmenu' class='menu-inventory small' >
-                       <ul class="small">
-                          <li class='has-sub'><a href='#'><span>Products</span></a>
-                             <ul>
-                                <li><a href='#'><span>Product 1</span></a></li>
-                                <li><a href='#'><span>Product 2</span></a></li>
-                                <li class='last'><a href='#'><span>Product 3</span></a></li>
-                             </ul>
-                          </li>
-                       </ul>
-                       </div>
-                    Amount: <input type="text" placeholder="Ounces"/>
-                    Info: <input type="textarea" placeholder="Style"/>
-
-                 </form>
+              </div>
             </div>
-            <div class="mid3 flex-inventory small-ish">
-              <form action="#" method="post" class="buildform">
-                    <div id='cssmenu' class='menu-inventory small' >
-                      <ul class="small">
-                         <li class='has-sub'><a href='#'><span>Products</span></a>
-                            <ul>
-                               <li><a href='#'><span>Product 1</span></a></li>
-                               <li><a href='#'><span>Product 2</span></a></li>
-                               <li class='last'><a href='#'><span>Product 3</span></a></li>
-                            </ul>
-                         </li>
-                      </ul>
-                      </div>
-                   Amount: <input type="text" placeholder="Ounces"/>
-                   Info: <input type="textarea" placeholder="Style"/>
-
-                </form>
-           </div>
-           <div class="mid3 flex-inventory small-ish">
-             <form action="#" method="post" class="buildform">
-                   <div id='cssmenu' class='menu-inventory small' >
-                     <ul class="small">
-                        <li class='has-sub'><a href='#'><span>Products</span></a>
-                           <ul>
-                              <li><a href='#'><span>Product 1</span></a></li>
-                              <li><a href='#'><span>Product 2</span></a></li>
-                              <li class='last'><a href='#'><span>Product 3</span></a></li>
-                           </ul>
-                        </li>
-                     </ul>
-                     </div>
-                  Amount: <input type="text" placeholder="Ounces"/>
-                  Info: <input type="textarea" placeholder="Style"/>
-
-               </form>
-          </div>
-          <div class="mid3 flex-inventory small-ish">
-            <form action="#" method="post" class="buildform">
-                  <div id='cssmenu' class='menu-inventory small' >
-                    <ul class="small">
-                       <li class='has-sub'><a href='#'><span>Products</span></a>
-                          <ul>
-                             <li><a href='#'><span>Product 1</span></a></li>
-                             <li><a href='#'><span>Product 2</span></a></li>
-                             <li class='last'><a href='#'><span>Product 3</span></a></li>
-                          </ul>
-                       </li>
-                    </ul>
-                    </div>
-                 Amount: <input type="text" placeholder="Ounces"/>
-                 Info: <input type="textarea" placeholder="Style"/>
-
-              </form>
-         </div>
-         <div class="mid3 flex-inventory small-ish">
-           <form action="#" method="post" class="buildform">
-                 <div id='cssmenu' class='menu-inventory small' >
-                   <ul class="small">
-                      <li class='has-sub'><a href='#'><span>Products</span></a>
-                         <ul>
-                            <li><a href='#'><span>Product 1</span></a></li>
-                            <li><a href='#'><span>Product 2</span></a></li>
-                            <li class='last'><a href='#'><span>Product 3</span></a></li>
-                         </ul>
-                      </li>
-                   </ul>
-                   </div>
-                Amount: <input type="text" placeholder="Ounces"/>
-                Info: <input type="textarea" placeholder="Style"/>
-
-             </form>
-        </div>
-        <div class="mid3 flex-inventory small-ish">
-          <form action="#" method="post" class="buildform">
-                <div id='cssmenu' class='menu-inventory small' >
-                  <ul class="small">
-                     <li class='has-sub'><a href='#'><span>Products</span></a>
-                        <ul>
-                           <li><a href='#'><span>Product 1</span></a></li>
-                           <li><a href='#'><span>Product 2</span></a></li>
-                           <li class='last'><a href='#'><span>Product 3</span></a></li>
-                        </ul>
-                     </li>
-                  </ul>
-                  </div>
-               Amount: <input type="text" placeholder="Ounces"/>
-               Info: <input type="textarea" placeholder="Style"/>
-
-            </form>
-          </div>
-        </div>
               <footer class="footer">
                 <div class="footer-content">
                     <ul>
