--- a/public/recipe-build.html
+++ b/public/recipe-build.html
@@ -31,14 +31,14 @@
                     </ul>
                  </li>
               </ul>
-              </div> 
+              </div>
 
               <form action="#" method="post">
                 <div class="recipe-entry">
                 Recipe Name: <input type="text" placeholder="Name"/>
                 Created By: <input type="textarea" placeholder="Creator"/>
                 Prep Time: <input type="text" placeholder="Min"/>
-                Notes: <input type="textarea" placeholder="Notes"/>
+                Notes: <input type="textarea" placeholder="Notes" class="med-text-box"/>
                 Directions: <input type="textarea" placeholder="Directions"/>
               </div>
               </form>
@@ -47,6 +47,7 @@
 
 
                  <form action="#" method="post" class="buildform">
+                   <div class="recipe-entry">
 
                     <div class="encompass">
                       <div class='dropdown-btn small' >
