--- a/public/landing1.html
+++ b/public/landing1.html
@@ -14,11 +14,9 @@
               <header class="header">
                 <div class="header-content">
                     <ul>
-                      <a href="/"><li><div class="big-li">Inventory</div></li></a>
-                      <a href="/recipes"><li>Recipes</li></a>
-                      <a href="/inventory"><li>Inventory</li></a>
-                      <li>Drink Suggestor</li>
-                      <li>Search</li>
+                      <a href="/"><li><div class="two">Inventory</div></li></a>
+                      <a href="/recipes"><li><div class="two">Recipes</div></li></a>
+
                     </ul>
                 </div>
               </header>
