--- a/public/recipe-build1.html
+++ b/public/recipe-build1.html
@@ -35,7 +35,8 @@
             </ul>
             </div>
   <!-- FORM START -->
-            <form action="/recipes/new" method="post">
+            <form action="/recipes/new" method='post buildform columns'>
+
               <div class="recipe-entry">
 
                 <label for="name">Name:</label>
@@ -53,10 +54,10 @@
               <!-- </div> -->
 
             </div>
-          </form>
 
-             <form class="buildform columns" action="#" method="post">
 
+
+             <div class= 'buildform columns'>
              <div class='dropdown-btn'>
 
                    <label for="type1">Ingredient Type</label>
@@ -176,28 +177,25 @@
          <label for="info8">Info</label>
          <input type="text" class="form-control" name="info8" id="info8">
        </div>
-       <br>
          <label for="directions">Directions:</label>
          <input id="directions" name="directions" type="text" class="lg-text-box form-control" required>
          <button type="submit" class="btn btn-primary">Add recipe</button>
        </form>
 
-      </div>
+
 <!-- END FORM -->
-            <footer class="footer">
-              <div class="footer-content">
+            <footer class="footer footer-tall footer-left">
+              <div class="footer-content footer-tall">
                   <ul>
-                    <li><div class="big-li">Bar-Manager</div></li>
+                    <li><div class= "three">Bar-Manager</div></li>
                     <a href="/recipes"><li>Recipes</li></a>
                     <a href="/inventory"><li>Inventory</li></a>
-                    <li>Planner</li>
-                    <li>Search</li>
                   </ul>
                 </div>
             </footer>
-
+            </div>
           </div>
-        </div>
+
 
     </body>
 </html>
