complete update-finish and landing-complete

--- a/src/main/resources/public/inventory.html
+++ b/src/main/resources/public/inventory.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width">
     <link href='https://fonts.googleapis.com/css?family=Sacramento' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Alice' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="css/application.css">
+    <link rel="stylesheet" href="application.css">
     <title>Bar-Inventory</title>
   </head>
     <body>
@@ -36,6 +36,7 @@
 
                     <tbody>
                       <tr>
+                        <!-- INPUT BOXES LEFT OUT OF VTL -->
                           <td>Brand: <input type="text" placeholder="First name"/></td>
                           <td>Fox</td>
                           <td>Slytherin</td>
