--- a/src/main/resources/public/landing-complete.html
+++ b/src/main/resources/public/landing-complete.html
@@ -3,7 +3,7 @@
   <head>
     <link href='https://fonts.googleapis.com/css?family=Sacramento' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Alice' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="css/application.css">
+    <link rel="stylesheet" href="application.css">
     <meta name="viewport" content="width=device-width">
     <title>Landing-Page</title>
   </head>
@@ -14,8 +14,8 @@
               <header class="header">
                 <div class="header-content">
                     <ul>
-                      <a href="/"><li><div class="two">Inventory</div></li></a>
-                      <a href="/recipes"><li><div class="two">Recipes</div></li></a>
+                      <a href="/"><li><div class="two landing-li">Inventory</div></li></a>
+                      <a href="/recipes"><li><div class="two landing-li">Recipes</div></li></a>
 
                     </ul>
                 </div>
