--- a/src/main/resources/public/update1.html
+++ b/src/main/resources/public/update1.html
@@ -3,7 +3,7 @@
   <head>
     <link href='https://fonts.googleapis.com/css?family=Sacramento' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Alice' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="css/application.css">
+    <link rel="stylesheet" href="application.css">
     <meta name="viewport" content="width=device-width">
     <title>Recipe-Update</title>
   </head>
